#include $(top_srcdir)/PATHS
noinst_LTLIBRARIES = libInternalGMeans.la

libInternalGMeans_la_SOURCES = \
	andersondarling.c \
	andersondarling.h \
	csv_parser.c \
	csv_parser.h \
	dataorg.c \
	dataorg.h \
	get_ad_cv.c \
	get_ad_cv.h \
	gmeans.c \
	gmeans.h \
	kmeans.c \
	kmeans.h \
	kmeans_math.c \
	kmeans_math.h \
	smp_superscalar_sort.c \
	smp_superscalar_sort.h \
	tools.c \
	tools.h 
