INCLUDES = -I$(top_srcdir)/src/BasicClasses 

noinst_LTLIBRARIES = libKalign2.la

libKalign2_la_SOURCES = \
  kalign2_distance_calculation.c \
  kalign2_dp.c \
  kalign2_mem.c \
  kalign2_inferface.c \
  kalign2_misc.c \
  kalign2_tree.c \
  kalign2_profile.c \
  kalign2_alignment_types.c \
  kalign2_feature.c \
  kalign2_hirschberg.c \
  kalign2_advanced_gaps.c \
  kalign2_hirschberg_dna.c \
  kalign2_string_matching.c \
  kalign2_profile_alignment.c

