AM_CPPFLAGS = -I$(top_srcdir)/src/BasicClasses 

noinst_LTLIBRARIES = libKalign2.la

libKalign2_la_SOURCES = \
	kalign2.h \
	kalign2_alignment_types.c \
	kalign2_distance_calculation.c \
	kalign2_dp.c \
	kalign2_mem.c \
	kalign2_misc.c \
	kalign2_profile.c \
	kalign2_string_matching.c \
	kalign2_tree.c 

